--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avatar.proportioned {/*ENCADENAMIENTO DE SELECTORES*/
+  width:300px;
+height: auto;
+
+}
+.avatar.distorted {
+ width:200px;
+ height: 400px;
+}
