--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,39 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: auto;
+  padding:8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px;
+  box-sizing: border-box;
+  padding: 16px 8px 16px 8px;
+  
 }
 
 .button-container {
   background: #e3f4ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  margin: 8px;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+background: white;
+ justify-content: center;
+ padding: 8px 24px 8px 24px;
+ border: none;
+
+
 }
