Se agrego estilos de diseño en css y etiquetas div en html para complementar el diseño

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -5,13 +5,16 @@ you'll learn about it later. */
 body {
   margin: 0;
   background: #eee;
-  font-family: Besley, serif;
+  font-family: serif;
 }
 
 .header {
+  display: flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -37,6 +40,7 @@ button {
   padding: 8px 24px;
 }
 
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
@@ -44,5 +48,15 @@ a {
 }
 
 ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;/* Espacio entre los elementos dentro del contenedor */
   list-style-type: none;
+}
+
+.left, .right {
+display: flex;
+align-items: center;
+gap: 16px;
 }
