--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box
+}
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html, body {
@@ -16,6 +19,9 @@ body {
 }
 
 .modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
@@ -33,6 +39,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -54,6 +61,8 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+ 
+ 
 }
 
 button.continue {
@@ -63,7 +72,27 @@ button.continue {
 }
 
 button.cancel {
+  display: flex;
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  margin-right:auto;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap:wrap;
+  gap: 8px;
+  padding: 0;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+.tex {
+margin-bottom:16px ;
 }
